--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <form action="#" method="POST">
             <input placeholder="Email" type="email" id="email" name="email" required>
             <button type="submit"><a href="https://dailyverses.net/fr/verset-de-la-bible-aleatoire">-> Valider <-</a></button>
+            <p>Le verset sur le vous tomberais seras le votre ne surtout pas changer!</p>
         </form>
     </div>
 </body>
